--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.16
   path_drawing: ^1.0.1
   url_launcher: ^6.3.1
 
@@ -52,6 +53,7 @@ flutter:
     - assets/fonts/
     - assets/icons/
     - assets/projects/
+    - assets/technologies/
 
   fonts:
     - family: Onest
