update: Icono y Preview al compartir

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Pablo Perea Campos - Porfolio",
+    "name": "Mi Porfolio",
     "short_name": "Porfolio",
     "start_url": ".",
     "display": "standalone",
